Cleaned Job Creation/Retention Dataset

--- a/Pennsylvania Economy Data.ipynb
+++ b/Pennsylvania Economy Data.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pennsylvania Economy and Quality of Life Data"
+    "# Pennsylvania Economy and Quality of Life Data by county\n",
+    "### Using data about the accumulative debts, average wages, degrees completed in the state, market value, and jobs to be created."
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -31,41 +32,62 @@
     "client = Socrata(\"data.pa.gov\", MyAppToken)\n",
     "\n",
     "#Import Data from different APIs'\n",
-    "\n",
     "## Municipality Total Debt 2015 Community and Economic Development\n",
-    "debt = client.get(\"rihr-yjcp\")\n",
+    "debt_list = client.get(\"rihr-yjcp\")\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "debt_df = pd.DataFrame.from_records(debt)\n",
+    "debt = pd.DataFrame.from_records(debt_list)\n",
+    "\n",
+    "# # # # # # # # # #\n",
     "\n",
     "## School District Yearly Market Value Report Certified 2016 Community and Economic Development\n",
-    "market_value = client.get(\"miq6-hsyp\")\n",
+    "market_value_list = client.get(\"miq6-hsyp\")\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "market_value_df = pd.DataFrame.from_records(market_value)\n",
+    "market_value = pd.DataFrame.from_records(market_value_list)\n",
+    "\n",
+    "# # # # # # # # # #\n",
     "\n",
     "## All Jobs January 2015 To October 2016 Community and Economic Development\n",
-    "jobs = client.get(\"d5pf-ti7w\")\n",
+    "job_list = client.get(\"d5pf-ti7w\")\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "jobs_df = pd.DataFrame.from_records(jobs)\n",
+    "job_creation = pd.DataFrame.from_records(jobs_list)\n",
+    "\n",
+    "# # # # # # # # # #\n",
     "\n",
     "## Occupational Wages 2017 Labor and Industry\n",
-    "wages = client.get(\"mdvn-squs\")\n",
+    "wages_list = client.get(\"mdvn-squs\")\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "wages_df = pd.DataFrame.from_records(wages)\n",
+    "wages = pd.DataFrame.from_records(wages_list)\n",
+    "\n",
+    "# # # # # # # # # #\n",
     "\n",
     "## Post Secondary Completions Total Awards/Degrees 2015-16 Education\n",
-    "degrees = client.get(\"jqcu-bcsg\")\n",
+    "degrees_list = client.get(\"jqcu-bcsg\")\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "degrees_df = pd.DataFrame.from_records(degrees)\n"
+    "degrees_issued = pd.DataFrame.from_records(degrees_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Starting with the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Job Creation and Retention for 2015 and 2016 Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -89,145 +111,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>area_name</th>\n",
-       "      <th>county_code</th>\n",
-       "      <th>state_fips</th>\n",
-       "      <th>county_fips</th>\n",
-       "      <th>wage_period</th>\n",
-       "      <th>wage_type</th>\n",
-       "      <th>wage_area</th>\n",
-       "      <th>soc</th>\n",
-       "      <th>soc_title</th>\n",
-       "      <th>entry_annual_wage</th>\n",
-       "      <th>average_annual_wage</th>\n",
-       "      <th>experienced_annual_wage</th>\n",
+       "      <th>jobs_pledged_total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>countyname</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Crawford County</td>\n",
-       "      <td>20</td>\n",
-       "      <td>42</td>\n",
-       "      <td>39</td>\n",
-       "      <td>May 2017</td>\n",
-       "      <td>CTY</td>\n",
-       "      <td>Crawford County</td>\n",
-       "      <td>35-9031</td>\n",
-       "      <td>Hosts &amp; Hostesses: Restaurant, Lounge &amp; Coffee...</td>\n",
-       "      <td>16920</td>\n",
-       "      <td>16970</td>\n",
-       "      <td>17000</td>\n",
+       "      <th>Adams</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cameron County</td>\n",
+       "      <th>Allegheny</th>\n",
+       "      <td>9151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armstrong</th>\n",
+       "      <td>127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beaver</th>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bedford</th>\n",
        "      <td>12</td>\n",
-       "      <td>42</td>\n",
-       "      <td>23</td>\n",
-       "      <td>May 2017</td>\n",
-       "      <td>WDA</td>\n",
-       "      <td>North Central WDA</td>\n",
-       "      <td>41-9041</td>\n",
-       "      <td>Telemarketers</td>\n",
-       "      <td>16910</td>\n",
-       "      <td>17030</td>\n",
-       "      <td>17100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Clearfield County</td>\n",
-       "      <td>17</td>\n",
-       "      <td>42</td>\n",
-       "      <td>33</td>\n",
-       "      <td>May 2017</td>\n",
-       "      <td>WDA</td>\n",
-       "      <td>North Central WDA</td>\n",
-       "      <td>41-9041</td>\n",
-       "      <td>Telemarketers</td>\n",
-       "      <td>16910</td>\n",
-       "      <td>17030</td>\n",
-       "      <td>17100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Elk County</td>\n",
-       "      <td>24</td>\n",
-       "      <td>42</td>\n",
-       "      <td>47</td>\n",
-       "      <td>May 2017</td>\n",
-       "      <td>WDA</td>\n",
-       "      <td>North Central WDA</td>\n",
-       "      <td>41-9041</td>\n",
-       "      <td>Telemarketers</td>\n",
-       "      <td>16910</td>\n",
-       "      <td>17030</td>\n",
-       "      <td>17100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jefferson County</td>\n",
-       "      <td>33</td>\n",
-       "      <td>42</td>\n",
-       "      <td>65</td>\n",
-       "      <td>May 2017</td>\n",
-       "      <td>WDA</td>\n",
-       "      <td>North Central WDA</td>\n",
-       "      <td>41-9041</td>\n",
-       "      <td>Telemarketers</td>\n",
-       "      <td>16910</td>\n",
-       "      <td>17030</td>\n",
-       "      <td>17100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           area_name county_code state_fips county_fips wage_period wage_type  \\\n",
-       "0    Crawford County          20         42          39    May 2017       CTY   \n",
-       "1     Cameron County          12         42          23    May 2017       WDA   \n",
-       "2  Clearfield County          17         42          33    May 2017       WDA   \n",
-       "3         Elk County          24         42          47    May 2017       WDA   \n",
-       "4   Jefferson County          33         42          65    May 2017       WDA   \n",
-       "\n",
-       "           wage_area      soc  \\\n",
-       "0    Crawford County  35-9031   \n",
-       "1  North Central WDA  41-9041   \n",
-       "2  North Central WDA  41-9041   \n",
-       "3  North Central WDA  41-9041   \n",
-       "4  North Central WDA  41-9041   \n",
-       "\n",
-       "                                           soc_title entry_annual_wage  \\\n",
-       "0  Hosts & Hostesses: Restaurant, Lounge & Coffee...             16920   \n",
-       "1                                      Telemarketers             16910   \n",
-       "2                                      Telemarketers             16910   \n",
-       "3                                      Telemarketers             16910   \n",
-       "4                                      Telemarketers             16910   \n",
-       "\n",
-       "  average_annual_wage experienced_annual_wage  \n",
-       "0               16970                   17000  \n",
-       "1               17030                   17100  \n",
-       "2               17030                   17100  \n",
-       "3               17030                   17100  \n",
-       "4               17030                   17100  "
+       "            jobs_pledged_total\n",
+       "countyname                    \n",
+       "Adams                        4\n",
+       "Allegheny                 9151\n",
+       "Armstrong                  127\n",
+       "Beaver                      60\n",
+       "Bedford                     12"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wages_df.head()"
+    "# Cleaning job_creation dataframe\n",
+    "job_creation.head()\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "# job_creation = job_creation.drop(columns=['year', 'month', 'total_jobs'])\n",
+    "\n",
+    "# Make sure numbers are a numeric type\n",
+    "job_creation['jobs_pledged_to_be_created'] = pd.to_numeric(job_creation['jobs_pledged_to_be_created'])\n",
+    "job_creation['jobs_pledged_to_be_retained'] = pd.to_numeric(job_creation['jobs_pledged_to_be_retained'])\n",
+    "\n",
+    "# Group by the county name\n",
+    "job_creation_countys = job_creation.groupby('countyname').sum()\n",
+    "\n",
+    "# Add the columns together\n",
+    "job_creation_countys['jobs_pledged_total'] = job_creation_countys['jobs_pledged_to_be_created'] + job_creation_countys['jobs_pledged_to_be_retained']\n",
+    "job_creation_countys = job_creation_countys.drop(columns=['jobs_pledged_to_be_created', 'jobs_pledged_to_be_retained'])\n",
+    "\n",
+    "# Display dataframe\n",
+    "job_creation_countys.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
